<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount"
    android:background="#000000">
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/userName"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstName"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/password"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/firstName"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastName"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/lastName"
        android:paddingLeft="10dp"
        android:layout_below="@+id/firstName" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/signUp"
        android:id="@+id/signUp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lastName"
        android:textColor="#3aa8c1"
        android:background="@drawable/rounded_button"
        android:textSize="20dp"
        android:layout_alignLeft="@+id/lastName" />
</RelativeLayout>
