<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context="com.thefinder.Activities.LogInActivity"
    android:background="#000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="500dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight=".7"
            android:inputType="textPersonName"
            android:id="@+id/userName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:hint="@string/userName"
            android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight=".7"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:background="#ffffff"
                android:hint="@string/password"
                android:padding="10dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1" >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight=".7"
            android:text="@string/logIn"
            android:id="@+id/logIn"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#3aa8c1"
            android:background="@drawable/rounded_button"
            android:onClick="onLogInClick"
            android:textSize="20dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1" >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight=".7"
            android:text="@string/createAccount"
            android:id="@+id/addAcount"
            android:layout_centerHorizontal="true"
            android:textColor="#3aa8c1"
            android:background="@drawable/rounded_button"
            android:allowUndo="true"
            android:textSize="20dp" />
        </LinearLayout>
        </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="false" />

</RelativeLayout>
